feat: console edit profile keywords support
